ユーザー新規登録,ユーザーログイン

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,52 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/5fbb5dad38.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <% if admin_signed_in? %>
+
+          <li><%= link_to "商品一覧", admin_items_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "会員一覧", admin_customers_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "注文履歴一覧", admin_orders_show_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "About", public_homes_about_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+          
+      <% elsif customer_signed_in? %>
+
+          <li style="font-family: HiraMinPro-W6; margin-top: 15px;">
+            ようこそ、<%= current_customer.last_name + current_customer.first_name %>さん！
+          </li>
+          <li><%= link_to "マイページ", public_customers_show_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "商品一覧", public_items_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "カート", customers_cart_items_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "About", about_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+
+       <% else %>
+
+          <li><%= link_to "商品一覧", public_items_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "新規登録", new_customer_registration_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "About", public_homes_about_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
+          <li><%= link_to "ログイン", new_customer_session_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+
+       <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
