admin商品一覧,商品詳細,商品編集

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<div class="container">
+ <div class="row">
+　<h2>商品編集</h2>
+　<div class= "mx-auto">
+　 <table>
+　  <tbody>
+     <%= form_with model: @item,url:admin_item_path do |f| %>
+      <tr>
+       <th><h4>商品画像</h4></th>
+       <td><%= f.file_field :image %></td>
+      </tr>
+
+      <tr>
+        <th><h4>商品名</h4></th>
+        <td><%= f.text_field :name, class: "form-control" %></td>
+      </tr>
+
+      <tr>
+        <th><h4>商品説明</h4></th>
+        <td><%= f.text_area :introduction, class: "form-control" %></td>
+      </tr>
+
+      <tr>
+       <th><h4>税抜き価格</h4></th>
+       <td><%= f.text_area :price, class: "form-control" %></td>
+      </tr>
+      
+      </tbody>
+ 　　</table>
+  <%= f.submit "変更を保存" %>
+
+<% end %>
