--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<div class="container">
+ <div class="row">
+   <div class="col-12">
+      <h2>商品一覧</h2>
+       <div class="text-right">
+        <%= link_to "新規登録" ,new_admin_item_path, class:"btn btn-lg btn-primary" %>
+       </div>
+    </div>
+  <table class="table">
+   <thead>
+    <tr>
+      <th scope="col">商品ID</th>
+      <th scope="col">商品名</th>
+      <th scope="col">税抜価格</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @items.each do |item| %>
+     <tr>
+       <th scope="row"><%= item.id %></th>
+       <td><%= link_to item.name ,admin_item_path(item) %></td>
+       <td><%= item.price %></td>
+            <% end %>
+        </tbody>
+      </table>
+      <%= paginate @items %>
+    </div>
+  </div>
+ </div>
