--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,37 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+
+ <div class="m-5">
+  <h1>商品新規登録</h1>
+</div>
+
+<div class= "row">
+<div class= "mx-auto">
+ <table>
+   <tbody>
+
+
+    <%= form_with model: @item,url:admin_items_path do |f| %>
+     <tr>
+       <th><h4>商品画像</h4></th>
+       <td><%= f.file_field :image %></td>
+      </tr>
+
+     <tr>
+       <th><h4>商品名</h4></th>
+       <td><%= f.text_field :name, class: "form-control" %></td>
+      </tr>
+
+     <tr>
+       <th><h4>商品説明</h4></th>
+       <td><%= f.text_area :introduction, class: "form-control" %></td>
+      </tr>
+
+     <tr>
+       <th><h4>税抜価格</h4></th>
+       <td><%= f.text_area :price, class: "form-control" %></td>
+      </tr>
+     </tbody>
+    </table>
+       <%= f.submit '新規登録' %>
+       <% end %>
+  </div>
+ </div>
