--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="container">
+ <div class="row">
+  <div class="col-4">
+      <h2>商品詳細</h2><br>
+      <%= image_tag @item.image, size: "300x300" %>
+  </div>
+        
+         <div class="col-4">
+          <div class="mt-5">
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>商品名</td>
+              <td><%= @item.name %></td>
+            </tr>
+            <tr>
+              <td>商品説明</td>
+              <td><%= @item.introduction %></td>
+            </tr>
+            <tr>
+              <td>税抜き価格</td>
+              <td><%= @item.price %>円</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="col-md-offset-1 col-
+          md-2 text-right">
+          <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-primary" %>
+        </div>
+      </div>
+    </div>
