--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,44 +12,54 @@
 
   <body>
     <header>
+      <nav class="navbar navbar-expand-lg navbar-white bg-white">
+       <div class="container">
+         <a class="navbar-brand" href="/">
+           <span>nagano cake</span></a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+         </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav ml-auto">
       <% if admin_signed_in? %>
 
-          <li><%= link_to "商品一覧", admin_items_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "会員一覧", admin_customers_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "注文履歴一覧", admin_orders_show_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "About", public_homes_about_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+          <li><%= link_to "商品一覧", admin_items_path, class:"nav-link text-dark" %></li>
           
+          <li><%= link_to "会員一覧", admin_customers_path,class: "nav-link text-dark" %></li>
+          
+          <li><%= link_to "注文履歴一覧", admin_orders_show_path,class: "nav-link text-dark" %></li>
+          
+          <li><%= link_to "About", homes_about_path,class: "nav-link text-dark" %></li>
+         
+          <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: "nav-link text-dark" %></li>
+
       <% elsif customer_signed_in? %>
 
           <li style="font-family: HiraMinPro-W6; margin-top: 15px;">
             ようこそ、<%= current_customer.last_name + current_customer.first_name %>さん！
           </li>
-          <li><%= link_to "マイページ", public_customers_show_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "商品一覧", public_items_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "カート", customers_cart_items_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "About", about_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li><%= link_to "マイページ", customers_show_path,class: "nav-link text-dark" %></li>
+
+          <li><%= link_to "商品一覧", items_index_path,class: "nav-link text-dark" %></li>
+
+          <li><%= link_to "カート", cart_items_path,class: "nav-link text-dark" %></li>
+          
+          <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: "nav-link text-dark" %></li>
 
        <% else %>
 
-          <li><%= link_to "商品一覧", public_items_index_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "新規登録", new_customer_registration_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "About", public_homes_about_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
-          <li style="font-family: Osaka; margin-top: 15px; color: #696969;">|</li>
-          <li><%= link_to "ログイン", new_customer_session_path, style: "font-family: HiraMinPro-W6; color: #000000;" %></li>
+          <li><%= link_to "商品一覧", items_index_path,class: "nav-link text-dark" %></li>
+
+          <li><%= link_to "新規登録", new_customer_registration_path,class: "nav-link text-dark" %></li>
+
+          <li><%= link_to "About", homes_about_path,class: "nav-link text-dark" %></li>
+
+          <li><%= link_to "ログイン", new_customer_session_path, class: "nav-link text-dark" %></li>
 
        <% end %>
+       </ul>
+    </nav>
+  </div>
     </header>
     <%= yield %>
   </body>
