--- a/app/views/public/customers/check.html.erb
+++ b/app/views/public/customers/check.html.erb
@@ -1,2 +1,16 @@
-<h1>Public::Customers#check</h1>
-<p>Find me in app/views/public/customers/check.html.erb</p>
+
+  <div class="m-5">
+    <div class= "mx-auto">
+    <h2><strong>本当に退会しますか？</strong></h2>
+    <div class="messages">
+        <h3>退会すると、会員登録情報や<br>
+        これまでの購入履歴が閲覧できなくなります。<br>
+        退会する場合は、「退会する」をクリックしてください。
+        </h3>
+    </div>
+ </div>
+ 
+    <%= link_to "　退会しない", customers_show_path, class: "glyphicon glyphicon-home btn btn-primary" %>
+    <%= link_to "　退会する　", customers_withdraw_path, method: :PATCH, data: {confirm: "本当に退会してもよろしいですか？"}, class: "glyphicon glyphicon-tint btn btn-danger" %>
+  </div>
+</div>
