--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,48 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+
+  <div class="m-5">
+    <h3><strong>マイページ</strong></h3>
+        <table class="table table-bordered table-condensed">
+            <p>
+                <strong class="information-link">登録情報</strong>
+                <%= link_to " 編集する", customers_edit_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
+            </p>
+            <tr>
+                <td class="col-xs-2">氏名</td>
+                <td><%= current_customer.last_name %><%= current_customer.first_name %></td>
+            </tr>
+
+            <tr>
+                <td class="col-xs-2">カナ</td>
+                <td><%= current_customer.last_name_kana %><%= current_customer.first_name_kana %></td>
+            </tr>
+
+            <tr>
+                <td class="col-xs-2">郵便番号</td>
+                <td><%= current_customer.postal_code %></td>
+            </tr>
+
+            <tr>
+                <td class="col-xs-2">住所</td>
+                <td><%= current_customer.address %></td>
+            </tr>
+
+            <tr>
+                <td class="col-xs-2">電話番号</td>
+                <td><%= current_customer.telephone_number %></td>
+            </tr>
+
+            <tr>
+                <td class="col-xs-2">メールアドレス</td>
+                <td><%= current_customer.email %></td>
+            </tr>
+        </table>
+         <p>
+            <strong class="shipping-link">注文履歴</strong>
+            <%= link_to " 一覧を見る", orders_path, class: "glyphicon glyphicon-folder-open btn btn-info" %>
+         </p>
+
+
+
+   <div>
+</div>
+</div>
