--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,77 +1,78 @@
+<div class="m-5">
 <div class="contaier">
-　<h2>新規登録</h2>
+　<h2>新規会員登録</h2>
 
 　　<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
      <div class="row">
       <label class="col-lg-3">名前</label>
        <div class="col-lg-3">
-        <%= f.text_field :last_name,autoforcus: true, autocomplete: "last_name",  placeholder: "(姓)" %>
+        <%= f.text_field :last_name,autoforcus: true, autocomplete: "first_name",  placeholder: "(姓)" %>
        </div>
         <div class="col-lg-3">
-         <%= f.text_field :first_name,autoforcus: true, autocomplete: "first_name",  placeholder: "(名)" %>
+         <%= f.text_field :first_name,autoforcus: true, autocomplete: "last_name",  placeholder: "(名)" %>
         </div>
      </div><br>
-      
-      
+
+
       <div class="row">
        <label class="col-lg-3">フリガナ</label>
         <div class="col-lg-3">
-         <%= f.text_field :last_name_kana,autoforcus: true, autocomplete: "last_name_kana",  placeholder: "(セイ)" %>
+         <%= f.text_field :last_name_kana,autoforcus: true, autocomplete: "first_name_kana",  placeholder: "(セイ)" %>
         </div>
          <div class="col-lg-3">
-          <%= f.text_field :first_name_kana,autoforcus: true, autocomplete: "first_name_kana",  placeholder: "(メイ)" %>
+          <%= f.text_field :first_name_kana,autoforcus: true, autocomplete: "last_name_kana",  placeholder: "(メイ)" %>
         </div>
       </div><br>
-      
-      
+
+
       <div class="row">
        <label class="col-lg-3">メールアドレス</label>
         <div class="col-lg-3">
     　    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
  　      </div>
  　    </div><br>
- 　  
- 　  
+
+
  　     <div class="row">
         <label class="col-lg-3">郵便番号（ハイフンなし）</label>
         <div class="col-lg-3">
           <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code",  placeholder: "\uf015", class: 'fa' %>
         </div>
       </div><br>
-      
-      
+
+
        <div class="row">
         <label class="col-lg-3">住所</label>
        <div class="col-lg-6">
          <%= f.text_field :address, autofocus: true, autocomplete: "address", :size=>"60",  placeholder: "\uf015", class: 'fa' %>
        </div>
       </div><br>
-      
-      
+
+
       <div class="row">
         <label class="col-lg-3">電話番号（ハイフンなし）</label>
         <div class="col-lg-3">
           <%= f.text_field :telephone_number, autofocus: true, autocomplete: "phone_number",  placeholder: "\uf095", class: 'fa' %>
         </div>
       </div><br>
- 　  
- 　  
+
+
     <div class="row">
      <div class="field">
       <%= f.label :password %>
        <% if @minimum_password_length %>
        <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-         <%= f.password_field :password, autocomplete: "new-password" %>
+         <%= f.password_field :password, autocomplete: "encrypted_password" %>
      </div>
      </div>
-     
-     
+
+
      <div class="row">
       <div class="field">
        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "encrypted_password" %>
       </div>
      </div>
 
@@ -80,4 +81,4 @@
        </div>
       <% end %>
      </div>
-
+   </div>
