--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div class="container">
+ <div class="row">
+   <div class="col-12">
+      <h2>会員一覧</h2>
+   </div>
+  </div>
+  
+    <div class="row">
+     <div class= "mx-auto">
+      <table class="table">
+       <thead>
+        <tr>
+         <th scope="col">会員ID</th>
+         <th scope="col">氏名</th>
+         <th scope="col">メールアドレス</th>
+         <th scope="col">ステータス</th>
+        </tr>
+       </thead>
+          
+       <tbody>
+         <% @customers.each do |customer| %>
+          <th scope="row"><%= customer.id %></th>
+          <td><%= link_to customer.last_name + "　"  + customer.first_name ,admin_customer_path(customer) %></td>
+          <td><%= customer.email %></td>
+          <td>
+            <% if customer.is_deleted == false %>
+              有効
+            <% else %>
+               無効
+            <% end %>
+          </td>
+            </tr>
+         <% end %>
+      </tbody>
+     </table>
