--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -4,7 +4,7 @@
       <h2>商品詳細</h2><br>
       <%= image_tag @item.image, size: "300x300" %>
   </div>
-        
+
          <div class="col-4">
           <div class="mt-5">
         <table class="table">
@@ -18,13 +18,12 @@
               <td><%= @item.introduction %></td>
             </tr>
             <tr>
-              <td>税抜き価格</td>
-              <td><%= @item.price %>円</td>
+              <td>税込価格(税抜価格)</td>
+              <td><%= (@item.price*1.1).floor %> (<%= @item.price %>)円</td>
             </tr>
           </tbody>
         </table>
-        <div class="col-md-offset-1 col-
-          md-2 text-right">
+        <div class="col-md-offset-1 col-md-2 text-right">
           <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-primary" %>
         </div>
       </div>
