--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<div class="container">
+ <div class="row">
+  <div class="col-3">
+   <h2>商品一覧(全<%= @items.count %>件)</h2>
+    </div>
+  </div>
+   <div class="row">
+	   <% @items.each do |item| %>
+	    <div class="col-md-3">
+	      <%= link_to items_show_path(item.id) do %>
+	     <%= image_tag item.image, size: "150x100" %><br />
+	      <% end %>
+	     商品名  <%= item.name %><br />
+	     ¥<%= item.price %><br />
+	   </div>
+	  <% end %>
+	   <%= paginate @items %>
+	  </div>
+	 </div>
