--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<div class="container">
+ <div class="row">
+  <div class="col-4">
+      <h2>商品詳細</h2><br>
+      <%= image_tag @item.image, size: "300x300" %>
+  </div>
+
+ <div class="col-4">
+   <div class="mt-5">
+    <table>
+     <tbody>
+
+       <tr>
+        <td><h2><strong><%= @item.name %></strong></h2></td>
+       </tr>
+
+       <tr>
+        <td><h3><%= @item.introduction %></h3></td>
+       </tr>
+       
+
+       <tr>
+        <td><h3>¥<%= (@item.price*1.1).floor %></h3></td>
+        <td>(税込)</td>
+       </tr>
+
+     </tbody>
+    </table>
+</div>
