カートの商品追加機能,カート一覧

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,20 +21,20 @@
          </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
-             
+
       <% if admin_signed_in? %>
 
           <li><%= link_to "商品一覧", admin_items_path, class:"nav-link text-dark" %></li>
-          
+
           <li><%= link_to "会員一覧", admin_customers_path, class: "nav-link text-dark" %></li>
-          
+
           <li><%= link_to "注文履歴一覧", admin_orders_show_path,class: "nav-link text-dark" %></li>
-          
-         
+
+
           <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: "nav-link text-dark" %></li>
-          
-          
-          
+
+
+
 
       <% elsif customer_signed_in? %>
 
@@ -43,15 +43,15 @@
           </li>
           <li><%= link_to "マイページ", customers_show_path,class: "nav-link text-dark" %></li>
 
-          <li><%= link_to "商品一覧", items_index_path,class: "nav-link text-dark" %></li>
+          <li><%= link_to "商品一覧", items_path,class: "nav-link text-dark" %></li>
 
           <li><%= link_to "カート", cart_items_path,class: "nav-link text-dark" %></li>
-          
+
           <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: "nav-link text-dark" %></li>
 
        <% else %>
 
-          <li><%= link_to "商品一覧", items_index_path,class: "nav-link text-dark" %></li>
+          <li><%= link_to "商品一覧", items_path,class: "nav-link text-dark" %></li>
 
           <li><%= link_to "新規登録", new_customer_registration_path,class: "nav-link text-dark" %></li>
 
