--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -7,7 +7,7 @@
    <div class="row">
 	   <% @items.each do |item| %>
 	    <div class="col-md-3">
-	      <%= link_to items_show_path(item.id) do %>
+	      <%= link_to item_path(item.id) do %>
 	     <%= image_tag item.image, size: "150x100" %><br />
 	      <% end %>
 	     商品名  <%= item.name %><br />
