--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,6 +3,13 @@
   <div class="col-4">
     <h3>ショッピングカート</h3>
   </div>
+
+  <div class="col-5">
+  </div>
+
+   <div class="col-3">
+    <%= link_to "カートを空にする", destroy_all_path, method: :delete, class: "pull-right btn btn-danger" %>
+  </div>
  </div>
 
 
@@ -22,7 +29,7 @@
           <td><%= cart_item.item.with_tax_price%></td>
 
           <td>
-            <%= form_with model:cart_item, url: cart_items_path, local:true do |f| %>
+            <%= form_with(url: cart_item_url(cart_item), method: :patch,local: true) do |f| %>
             <%= f.select :amount, *[1..10] %>
             <%= f.submit "変更" , class: "btn btn-success" %>
            <% end %>
@@ -37,3 +44,27 @@
   <% end %>
   </tbody>
  </table>
+ </div>
+
+  <div class="row">
+   <div class="col-4">
+    <%= link_to "買い物を続ける", root_path, class: "btn btn-primary", data: {"turbolinks" => false} %>
+   </div>
+
+   <div class="col-4">
+    </div>
+
+   <div class="col-4">
+     <table class="table table-bordered">
+        <tr>
+            <td><strong>合計金額</strong></td>
+            <td>¥<%= @total.round.to_s(:delimited)%></td>
+        </tr>
+    </table>
+   </div>
+  </div>
+
+   <div class= "col-xs-4 col-xs-offset-4">
+        <%= link_to "情報入力に進む", new_order_path, class: "col-xs-12 btn btn-success"%>
+   </div>
+  </div>
