--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -47,6 +47,19 @@
    <td class="col-xs-10"><%= f.text_field :email %>
   </tr>
 
+  <tr>
+   <th>会員ステータス</th>
+   <td>
+    <%= f.radio_button :is_deleted, false %>
+    <%= f.label :有効 %>
+   </td>
+   
+   <td>
+    <%= f.radio_button :is_deleted, true %>
+    <%= f.label :退会 %>
+   </td>
+  </tr>
+
 </table>
 　<%= f.submit "変更を保存" %>
 
