--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -46,6 +46,16 @@
    <td class="col-xs-10"><%= @customer.email %>
   </tr>
 
+  <tr>
+   <th>会員ステータス</th>
+   <td class="col-xs-10">
+   <% if @customer.is_deleted == false %>
+      有効
+   <% else %>
+      無効
+   <% end %>
+  </tr>
+
 </table>
 
   <div class="row">
@@ -53,6 +63,6 @@
     <%= link_to "編集する", edit_admin_customer_path(@customer), class: "btn btn-success" %>
     <%= link_to "注文履歴一覧を見る",admin_orders_show_path, class: "btn btn-success" %>
   </div>
-  
+
  </div>
 </div>
