--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -25,7 +25,9 @@
   <tbody>
   <% @cart_items.each do |cart_item| %>
       <tr>
-        　<td><%= cart_item.item.name %></td>
+        　<td>
+
+        　 <%= cart_item.item.name %>
           <td><%= cart_item.item.with_tax_price%></td>
 
           <td>
