--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,36 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<body>
+<div class="container">
+ <div class="row">
+  <div class="col-4">
+    <h3>注文情報入力</h3>
+  </div>
+ </div>
+</br>
+
+<div class="row">
+  <div class="font-monospace">
+ <%= form_with model: @order do |f| %>
+  <h4>支払方法</h4>
+   <%= f.radio_button :payment_method, Order.payments.key(0) %>
+   <%= f.label :payment_method_credit_card, Order.payments_i18n[:credit_card] %></br>
+
+   <%= f.radio_button :payment, Order.payments.key(1) %>
+   <%= f.label :payment, Order.payments_i18n[:transfer]%>
+  </div>
+ </div>
+
+  <h4>お届け先</h4>
+  
+     〒<%= @customer.postal_code %> <%= @customer.address %> </br>
+     <%= @customer.last_name %><%= @customer.first_name %>
+     
+    <div class="row">
+     <div class = "mx-auto">
+       <%= f.submit "確認画面へ進む", class:"btn btn-primary col-xs-6 col-xs-offset-1" %>
+     </div>
+     
+ <% end %>
+ </div>
+
+</body>
+
