注文完了画面,注文確認画面の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
           <li><%= link_to "会員一覧", admin_customers_path, class: "nav-link text-dark" %></li>
 
-          <li><%= link_to "注文履歴一覧", admin_orders_show_path,class: "nav-link text-dark" %></li>
+          <li><%= link_to "注文履歴一覧", admin_path,class: "nav-link text-dark" %></li>
 
 
           <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: "nav-link text-dark" %></li>
