--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+ <div class="row">
+  <h3>注文履歴一覧</h3>
+ </div>  
+   <table>
+    <tr>
+     <td>購入日時</td>
+     <td>購入者</td>
+     <td>注文個数</td>
+    </tr>
+     <% @orders.each do |order| %>
+      <tr>
+          <td>
+            <%= link_to  admin_orders_show_path(order.id) do %>
+              <%=  l order.created_at %>
+            <% end %>
+          </td>
+          <td><%= @order.name %></td>
+          <td><%= @order.order_details.sum(:amount) %></td>
+      </tr>
+    <% end %>
+</table>
