--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -14,7 +14,7 @@
 
 
 <div class="row">
- <table class="table">
+ <table class = "table table-hover table-inverse table-bordered">
   <thead>
       <th>商品名</th>
       <th>単価(税込)</th>
@@ -28,7 +28,7 @@
         　<td>
 
         　 <%= cart_item.item.name %>
-          <td><%= cart_item.item.with_tax_price%></td>
+          <td><%= cart_item.item.with_tax_price %></td>
 
           <td>
             <%= form_with(url: cart_item_url(cart_item), method: :patch,local: true) do |f| %>
@@ -43,7 +43,7 @@
           </td>
           <% @合計金額 =  cart_item.subtotal %>
       </tr>
-  <% end %>
+ 
   </tbody>
  </table>
  </div>
@@ -68,5 +68,6 @@
 
    <div class= "col-xs-4 col-xs-offset-4">
         <%= link_to "情報入力に進む", new_order_path, class: "col-xs-12 btn btn-success"%>
+   <% end %>
    </div>
   </div>
