--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,22 +1,26 @@
 <div class="container">
  <div class="row">
   <h3>注文履歴一覧</h3>
- </div>  
-   <table>
-    <tr>
-     <td>購入日時</td>
-     <td>購入者</td>
-     <td>注文個数</td>
-    </tr>
-     <% @orders.each do |order| %>
-      <tr>
-          <td>
-            <%= link_to  admin_orders_show_path(order.id) do %>
-              <%=  l order.created_at %>
-            <% end %>
-          </td>
-          <td><%= @order.name %></td>
-          <td><%= @order.order_details.sum(:amount) %></td>
-      </tr>
-    <% end %>
+ </div>
+   <table class = "table">
+    <thead>
+     <div class = "mx-auto">
+     <tr>
+      <td>購入日時</td>
+      <td>購入者</td>
+      <td>注文個数</td>
+     </tr>
+    </thead>
+
+    <tbody>
+      <% @orders.each do |order| %>
+            <tr>
+              <td><%= link_to order.created_at.strftime("%Y-%m-%d %H:%M:%S"), admin_orders_show_path(order) %></td>
+              <td><%= order.customer.last_name + " " + order.customer.first_name %></td>
+              <td><%= order.order_details.sum(:amount) %></td>
+            </tr>
+      <% end %>
+
+     </tbody>
+  </div>   
 </table>
