--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,68 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+ <div class="row">
+  <h3>注文履歴詳細</h3>
+</div>
+  <table>
+
+    <tr>
+      <th>購入者</td>
+      <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
+    </tr>
+
+    <tr>
+      <th>注文日</td>
+      <td><%=  @order.created_at %></td>
+    </tr>
+
+    <tr>
+        <th>配送先</th>
+        <td>〒<%= @order.postal_code %><%= @order.address %></br>
+             <%= @order.customer.last_name %><%= @order.customer.first_name %></td>
+      </tr>
+
+    <tr>
+      <th>支払い方法</td>
+      <td><%= @order.payment_i18n%></td>
+    </tr>
+
+  </table>
+  
+  <br>
+<div class="row">
+ <div class="col-5">
+  <table class="table">
+
+  <tr>
+    <th>商品名</th>
+    <th>単価(税込)</th>
+    <th>数量</th>
+    <th>小計</th>
+  </tr>
+   <% @order_details.each do |order_detail| %>
+
+   <td><%= order_detail.item.name %></td>
+   <td><%= (order_detail.price*1.1).floor %></td>
+   <td><%= order_detail.amount %></td>
+   <td><%= ((order_detail.price*1.1).floor * order_detail.amount).floor.to_s(:delimited, delimiter: ',') %></td>
+
+  <% end %>
+
+</table>
+
+ <%= form_with model: @order_details, url: orders_path(@order_detail), method: :patch , local: true do |f| %>
+
+   <table>
+      <tr>
+        <th>商品合計</th>
+        <td><%= (@order.billing_amount - @order.postage).to_s(:delimited, delimiter: ',') %>円</td>
+      </tr>
+      <tr>
+        <th>送料</th>
+        <td><%= @order.postage.to_s(:delimited, delimiter: ',') %></td>
+      </tr>
+      <tr>
+        <th>請求金額合計</th>
+        <td><%= @order.billing_amount.to_s(:delimited, delimiter: ',') %>円</td>
+      </tr>
+    </table>
+<% end %>
