ユーザ注文履歴一覧,注文履歴詳細画面の実装

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -82,3 +82,12 @@
       <% end %>
      </div>
    </div>
+   
+  <div class="m-5">
+   <h3>既に登録済みの方</h3>
+    <div class="col-sm-3">
+      
+        <%= link_to "こちら", new_session_path(resource_name) %>
+  からログインしてください
+    </div>
+  </div>
