--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -61,7 +61,7 @@
   <div class="row">
     <div class="m-5">
     <%= link_to "編集する", edit_admin_customer_path(@customer), class: "btn btn-success" %>
-    <%= link_to "注文履歴一覧を見る",admin_orders_show_path, class: "btn btn-success" %>
+    <%= link_to "注文履歴一覧を見る",admin_path, class: "btn btn-success" %>
   </div>
 
  </div>
