--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -6,7 +6,11 @@
 
     <tr>
       <th>購入者</td>
-      <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
+      <td><%= link_to admin_customer_path(@order.customer) do %>
+        <%= @order.customer.last_name %>
+        <%= @order.customer.first_name %>
+        <% end %>
+       </td>
     </tr>
 
     <tr>
@@ -48,7 +52,9 @@
   <% end %>
 
 </table>
+</div>
 
+<div class="col-5">
  <%= form_with model: @order_details, url: orders_path(@order_detail), method: :patch , local: true do |f| %>
 
    <table>
