--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class="container">
+ <div class="row">
+	<div class="col-xs-12">
+		<h3><strong>注文履歴一覧</strong></h3>
+
+		<table class="table table-bordered table-condensed">
+
+		<tr>
+			<th>注文日</th>
+			<th class="col-xs-3">配送先</th>
+			<th class="col-xs-2">注文商品</th>
+			<th class="col-xs-1">支払金額</th>
+			<th class="col-xs-2">注文詳細</th>
+		</tr>
+
+	<% @orders.each do |order|%>
+		<tr>
+			<td class="col-xs-3"><%= order.created_at.strftime('%Y/%m/%d') %></td>
+			<td class="col-xs-2">〒<%= order.postal_code %><br>
+				<%= order.address %><br>
+				<%= order.name %><br>
+			</td>
+			
+			<td class="col-xs-1">
+				<% order.order_details.each do |order_detail| %>
+				<%= order_detail.item.name %><br>
+			<% end %>
+			</td>
+			<td class="col-xs-2"><%= order.billing_amount.to_s(:delimited, delimiter: ',') %></td>
+			<td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
+		</tr>
+		<% end %>
+	</table>
+	</div>
+</div>
