--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -26,27 +26,28 @@
   <% @cart_items.each do |cart_item| %>
       <tr>
         　<td>
-
-        　 <%= cart_item.item.name %>
+        　<%= image_tag cart_item.item.image, size: "50x50" %>
+        　<%= cart_item.item.name %>
+        　</td>
           <td><%= cart_item.item.with_tax_price %></td>
 
           <td>
-            <%= form_with(url: cart_item_url(cart_item), method: :patch,local: true) do |f| %>
+            <%= form_with model: cart_item, url: cart_item_path(cart_item.id) , local:true do |f| %>
             <%= f.select :amount, *[1..10] %>
             <%= f.submit "変更" , class: "btn btn-success" %>
-           <% end %>
+            <% end %>
           </td>
 
-          <td><%= cart_item.subtotal%></td>
+          <td><%= cart_item.subtotal %></td>
           <td class="col-xs-1">
            <%= link_to "削除する", cart_item_path(cart_item.id), method: :DELETE, class: "btn btn-danger" %>
           </td>
-          <% @合計金額 =  cart_item.subtotal %>
+ <% end %>
+
       </tr>
- 
   </tbody>
  </table>
- </div>
+</div>
 
   <div class="row">
    <div class="col-4">
@@ -67,7 +68,9 @@
   </div>
 
    <div class= "col-xs-4 col-xs-offset-4">
+    <% if @cart_items.any? %>
         <%= link_to "情報入力に進む", new_order_path, class: "col-xs-12 btn btn-success"%>
-   <% end %>
+    <% end %>
+
    </div>
   </div>
