--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -25,7 +25,7 @@
               <tr>
                 <th class="info">支払方法</th>
                 <td class="text-left">
-                  <%= @order.payment %>
+                  <%= @order.payment_i18n %>
                 </td>
               </tr>
           </tbody>
